2005-06-12  Sebastien Bacher  <seb128@debian.org>

	* configure.in: update to 2.11.5

==================== 2.11.4 ===================
	
2005-06-12  Sebastien Bacher  <seb128@debian.org>

	* configure.in: update the version to 2.11.4

2005-06-12  Sebastien Bacher  <seb128@debian.org>

	* NEWS:
	* configure.in: 2.11.3.1 bug fix.

2005-06-10  Sebastien Bacher  <seb128@debian.org>

	* configure.in: update for 2.11.4
	
==================== 2.11.3 ===================
	
2005-05-22  Sebastien Bacher  <seb128@debian.org>

	* ChangeLog capplets/about-me/e-image-chooser.c 
	capplets/accessibility/at-properties/at-startup-session.h 
	capplets/accessibility/keyboard/accessibility-keyboard.c 
	capplets/background/gnome-wp-info.c 
	capplets/common/gconf-property-editor.c 
	capplets/common/gnome-theme-apply.c 
	capplets/default-applications/gnome-default-applications-properties.c 
	capplets/keybindings/gnome-keybinding-properties.c 
	capplets/keyboard/gnome-keyboard-properties.c 
	capplets/mouse/gnome-mouse-properties.c 
	capplets/network/gnome-network-preferences.c 
	capplets/sound/sound-properties-capplet.c 
	capplets/theme-switcher/gnome-theme-details.c 
	capplets/theme-switcher/gnome-theme-manager.c 
	capplets/ui-properties/gnome-ui-properties.c 
	capplets/windows/gnome-window-properties.c 
	gnome-settings-daemon/factory.c 
	gnome-settings-daemon/gnome-settings-accessibility-keyboard.c 
	gnome-settings-daemon/gnome-settings-background.c 
	gnome-settings-daemon/gnome-settings-daemon.c 
	gnome-settings-daemon/gnome-settings-daemon.h 
	gnome-settings-daemon/gnome-settings-font.c 
	gnome-settings-daemon/gnome-settings-keybindings.c 
	gnome-settings-daemon/gnome-settings-keybindings.h 
	gnome-settings-daemon/gnome-settings-keyboard-xkb.c 
	gnome-settings-daemon/gnome-settings-keyboard.c 
	gnome-settings-daemon/gnome-settings-locate-pointer.h 
	gnome-settings-daemon/gnome-settings-mouse.c 
	gnome-settings-daemon/gnome-settings-multimedia-keys.c 