@@ -11,7 +11,13 @@ else
 randr_SUBDIRS = 
 endif
 
-SUBDIRS =  $(always_built_SUBDIRS) $(randr_SUBDIRS)
+if BUILD_ABOUTME
+aboutme_SUBDIRS = about-me
+else
+aboutme_SUBDIRS =
+endif
+
+SUBDIRS =  $(always_built_SUBDIRS) $(randr_SUBDIRS) $(aboutme_SUBDIRS)
 
 DIST_SUBDIRS = \
-	$(always_built_SUBDIRS) display
+	$(always_built_SUBDIRS) display $(aboutme_SUBDIRS)
